--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,9 @@
         "php-http/message": "^1.6",
         "php-http/guzzle6-adapter": "^1.1",
         "florianv/laravel-swap": "^1.3",
-        "siqwell/laravel-omnipay": "^0.2",
-        "siqwell/omnipay-webmoney": "^2.0"
+        "siqwell/laravel-omnipay": "dev-dev",
+        "siqwell/omnipay-transactpro": "dev-dev",
+        "siqwell/omnipay-coinpayments": "dev-dev"
     },
     "autoload": {
         "psr-4": {
