--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,9 @@
         }
     ],
     "require": {
-        "php-http/message": "^1.6",
-        "php-http/guzzle6-adapter": "^1.1",
+        "league/omnipay": "^3.0",
+        "php-http/buzz-adapter": "^1.0",
         "florianv/laravel-swap": "^1.3",
-        "siqwell/laravel-omnipay": "dev-dev",
         "siqwell/omnipay-transactpro": "dev-dev",
         "siqwell/omnipay-coinpayments": "dev-dev"
     },
