--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,7 @@
     "require": {
         "league/omnipay": "^3.0",
         "php-http/buzz-adapter": "^1.0",
-        "florianv/laravel-swap": "^1.3",
-        "siqwell/omnipay-transactpro": "dev-dev",
-        "siqwell/omnipay-coinpayments": "dev-dev"
+        "florianv/laravel-swap": "^1.3"
     },
     "autoload": {
         "psr-4": {
